modem: modem_iface_uart_async: make handle RX errors optional
ec362d4a48b14d5e3de9e5dde006bc27758f6040 added handling of RX errors
in the async uart modem driver. This however stops custom drivers
to disable the UART reception (since it's re-enabled).
Some UART drivers don't allow LPM when the UART DMA is still
active. This crashes the application (eg: STM32L5) when it
enters LPM.

This commit adds the posibility to make it a compilation option
to re-enable the RX reception when disabled.

Signed-off-by: Wouter Cappelle <wouter.cappelle@crodeon.com>

--- a/drivers/modem/Kconfig
+++ b/drivers/modem/Kconfig
@@ -114,6 +114,14 @@ config MODEM_IFACE_UART_ASYNC_RX_TIMEOUT_US
 	  value too much can result in spurious interrupts. Leaving it too
 	  high can reduce data throughput.
 
+config MODEM_IFACE_UART_ASYNC_HANDLE_RX_DISABLED
+	bool "Handle RX_DISABLED of the UART driver to re-enable the modem"
+	default y
+	help
+	  Handle the RX_DISABLED in the async callback to re-enable the modem.
+	  This can handle line errors on some drivers which would otherwise
+	  stop modem reception.
+
 endif # MODEM_IFACE_UART_ASYNC
 
 endif # MODEM_IFACE_UART
